2010-01-24  Eric Seidel  <eric@webkit.org>

        No review.

        Middle clicking the primary scroll bars on Chromium Linux triggers a paste event
        https://bugs.webkit.org/show_bug.cgi?id=33062

        * platform/gtk/Skipped:
         - This new test fails on Gtk for unknown reasons.
         - Skipping for now to make the bots green, until a Gtk person can look.

2010-01-24  Simon Fraser  <simon.fraser@apple.com>

        No review.

        Fix incorrect layout test that I checked in earlier.

        * platform/mac/compositing/reflections/load-video-in-reflection-expected.checksum:
        * platform/mac/compositing/reflections/load-video-in-reflection-expected.png:
        * platform/mac/compositing/reflections/load-video-in-reflection-expected.txt:

2010-01-24  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=34047
        <rdar://problem/7573699>
        Media element "endedPlayback" logic doesn't match spec

        * media/video-timeupdate-reverse-play-expected.txt: Added.
        * media/video-timeupdate-reverse-play.html: Added.

2010-01-23  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler.

        Video that loads inside reflection doesn't get reflected
        https://bugs.webkit.org/show_bug.cgi?id=34046
        
        Testcase for a video loading inside a reflection.

        * compositing/reflections/load-video-in-reflection.html: Added.
        * platform/mac/compositing/reflections/load-video-in-reflection-expected.checksum: Added.
        * platform/mac/compositing/reflections/load-video-in-reflection-expected.png: Added.
        * platform/mac/compositing/reflections/load-video-in-reflection-expected.txt: Added.

2010-01-23  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Implement support for FileList cloning in postMessage
        https://bugs.webkit.org/show_bug.cgi?id=34048
